--- a/main.html
+++ b/main.html
@@ -2,12 +2,45 @@
 <html>
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	<style>
+		.item{
+			height: 300px;
+			color: white;
+			font-size: 30px;
+			text-align: center;
+			line-height: 300px;
+		}
+
+		.first-slide {background-color: #e74c3c; }
+		.second-slide {background-color: #3498db; }
+		.third-slide {background-color: #2ecc71; }
+		.fourth-slide {background-color: #9b59b6; }
+		.fifth-slide {background-color: #f39c12; }
+	</style>
 </head>
 <body>
     <!-- Write your code here -->
     <!-- Bootstrap Bundle with Popper -->
+	<div id="myCarousel" class="carousel slide" data-ride="carousel">
+		
+		<div class="carousel-inner">
+
+		<div class="item first-slide">First Slide</div>
+			<div class="item second-slide">Second Slide</div>
+			<div class="item third-slide active">Third Slide</div>
+			<div class="item fourth-slide">Fourth Slide</div>
+			<div class="item fifth-slide">Fifth Slide</div>
+		</div>
+
+		<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+			<span class="glyphicon glyphicon-chevron-left"></span>
+		</a>
+
+		<a class="right carousel-control" href="#myCarousel" data-slide="next">
+			<span class="glyphicon glyphicon-chevron-right"></span>
+		</a>
+	</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </body>
- 
 </html>
